tests/miniJava/pos/000691_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) { } else System.out.println ( { } ) ; } }
