tests/miniJava/neg/003534_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( class java { } ) { } else { } } }
